--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 env:
-  SYSTEM_PACKAGES: gcc g++ xvfb qtbase5-dev
+  SYSTEM_PACKAGES: gcc g++ xvfb qtbase5-dev libegl1 libdbus-1-3 libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0 x11-utils libxcb-cursor0 libopengl0 libegl1-mesa
 
 jobs:
   tests:
@@ -16,6 +16,9 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10"]
+
+    env:
+      DISPLAY: ':99.0'
 
     steps:
     - name: Checkout
@@ -39,6 +42,11 @@ jobs:
     - name: Install Python dependencies
       run: |
         python3 -m pip install -e .[gui,backend,test] --constraint .github/dependabot/constraints.txt
+
+    # cf. https://pytest-qt.readthedocs.io/en/latest/troubleshooting.html
+    - name: Setup xvfb
+      run: |
+        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
 
     - name: Test with pytest
       run: |
