--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        python3 -m pytest --cov=damnit --cov-report=xml -v
+        python3 -m pytest --cov=damnit --cov-report=xml -v --xvfb-backend xvfb
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
