--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ gui = [
     "PyQtWebEngine",
     "pyflakes",  # for checking context file in editor
     "QScintilla==2.13",
+    "superqt",
     "tabulate",  # used in pandas to make markdown tables (for Zulip)
 ]
 test = [
