--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,14 +42,14 @@ jobs:
 
     - name: Test with pytest
       run: |
-        python3 -m pytest --cov=damnit --cov-report=xml -v
+        python3 -m pytest test/test_gui --cov=damnit --cov-report=xml -vvs
 
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        fail_ci_if_error: true
-        token: ${{ secrets.CODECOV_TOKEN }}
-        verbose: true
+    # - name: Upload coverage reports to Codecov
+    #   uses: codecov/codecov-action@v4
+    #   with:
+    #     fail_ci_if_error: true
+    #     token: ${{ secrets.CODECOV_TOKEN }}
+    #     verbose: true
 
   publish:
     runs-on: ubuntu-latest
