--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        python3 -m pytest test/test_gui --cov=damnit --cov-report=xml -vvs
+        python3 -m pytest tests/test_gui --cov=damnit --cov-report=xml -vvs
 
     # - name: Upload coverage reports to Codecov
     #   uses: codecov/codecov-action@v4
