--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        python3 -m pytest tests/test_gui.py --cov=damnit --cov-report=xml -vvs
+        python3 -m pytest tests/test_gui.py --cov=damnit --cov-report=xml -v
 
 
   publish:
